--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "escape-html": "^1.0.3",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "sharp": "^0.31.1"
   },
   "devDependencies": {
+    "@types/escape-html": "^1.0.2",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
